--- a/styles/quiz-styles/quiz-style.css
+++ b/styles/quiz-styles/quiz-style.css
@@ -12,7 +12,6 @@
     text-decoration: none;
 }
 
-
 .quiz p {
     font-weight: 500;
     font-size: 22px;
@@ -82,14 +81,33 @@
 }
 
 .legal-privacy {
-    padding: 20px 0;
-    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    margin-bottom: 1rem;
 }
 
 .legal-privacy a {
-    color: inherit;
+    position: relative;
+    padding: 0 12px;
     text-decoration: none;
-    margin: 0 10px;
+    transition: 0.3s ease-in-out;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    text-decoration: underline;
+    margin-top: 3rem !important;
+}
+
+.legal-privacy a:not(:last-child)::after {
+    content: "•";
+    position: absolute;
+    right: -14px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #000;
+    font-size: 16px;
 }
 
 
@@ -164,8 +182,8 @@
         padding: 18px;
     }
 
-    .legal-privacy a {
-        font-size: 18px;
+    .legal-privacy {
+        margin-top: 4rem !important;
     }
 }
 
@@ -203,10 +221,22 @@
         font-size: 20px;
         margin-top: 14px;
     }
+
+
 }
 
-@media (max-width:430px) {
+@media (max-width:502px) {
     .legal-privacy {
-        margin-top: 4rem !important;
+        flex-wrap: wrap;
+    }
+
+    .legal-privacy a {
+        margin-top: 0rem !important;
+    }
+
+    .legal-privacy a:not(:last-child)::after {
+        display: none;
     }
 }
+
+@media (max-width:496px) {}
