--- a/styles/style.css
+++ b/styles/style.css
@@ -308,7 +308,6 @@ body {
     overflow: hidden;
     border-radius: 40px;
     aspect-ratio: 16 / 9;
-    /* базовое соотношение */
 }
 
 .slider img {
@@ -378,9 +377,367 @@ body {
     transform: translateY(-2px);
 }
 
+.section-5 {
+    background-color: var(--second-hintergrund-color);
+    padding: 91px 0 69px;
+}
+
+.sec5-title {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+}
+
+.sec5-contents-block {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 41px;
+    margin-top: 68px;
+}
+
+.sec5-content {
+    background-color: #ffffff;
+    border-radius: 15px;
+    padding: 35px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.sec5-content p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    margin-bottom: auto;
+}
+
+.sec5-content img {
+    width: 100%;
+    aspect-ratio: 4 / 3;
+    object-fit: cover;
+    border-radius: 15px;
+    margin-bottom: 37px;
+    transition: transform 0.3s ease;
+}
+
+.sec5-content img:hover {
+    transform: scale(1.03);
+}
+
+.sec5-content h6 {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    margin-bottom: 28px;
+}
+
+.sec5-content p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+}
+
+.section5-btn {
+    display: block;
+    background-color: var(--button-color);
+    color: var(--brand-white);
+    transition: 0.3s;
+    width: 100%;
+    max-width: 398px;
+    padding: clamp(12px, 3vw, 22px) clamp(16px, 4vw, 24px);
+    border-radius: 40px;
+    text-align: center;
+    font-weight: 500;
+    font-size: clamp(16px, 3vw, 22px);
+    line-height: 1.2;
+    margin: 74px auto 0;
+    text-decoration: none;
+}
+
+.section5-btn:hover {
+    background-color: var(--button-hover-color);
+    transform: translateY(-2px);
+}
+
+.section-7 {
+    background-color: var(--hintergrund-colors);
+    padding: 106px 0;
+}
+
+.section-7-contents {
+    gap: 118px;
+}
+
+.section-7-text-top,
+.section-7-text-untertitle {
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 34px;
+    color: var(--schrift-color);
+}
+
+.section-7-text-top {
+    margin-bottom: 26px;
+}
+
+.section-7-text-untertitle {
+    margin-bottom: 96px;
+}
+
+.section-7-name {
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 54px;
+    color: #000000;
+}
+
+.section-7-text-bottom {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+}
+
+.sec7-block-images {
+    display: flex;
+    flex-direction: column;
+    gap: 27px;
+    flex-shrink: 0;
+}
+
+.sec7-block-images img {
+    width: 100%;
+    max-width: 615px;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+
+.section-13 {
+    background-color: var(--second-hintergrund-color);
+}
+
+.block-google-map {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.google-map {
+    width: 100%;
+    max-width: 70%;
+    height: 100vh;
+    max-height: 680px;
+    border-radius: 16px;
+}
+
+.legal-privacy {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 18px;
+    margin-top: 3rem;
+}
+
+.legal-privacy a {
+    position: relative;
+    padding: 0 12px;
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000000;
+    text-decoration: underline;
+}
+
+.legal-privacy a:not(:last-child)::after {
+    content: "•";
+    position: absolute;
+    right: -14px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #000;
+    font-size: 16px;
+}
+
+
+@media (max-width: 1200px) {
+    .sec5-contents-block {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .section-7-contents {
+        flex-direction: column;
+        gap: 78px;
+    }
+
+    .section-7-text-untertitle {
+        margin-bottom: 48px;
+    }
+}
+
+
 @media (max-width: 1024px) {
     .sec-3-settings-items {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .sec5-contents-block {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 991px) {
+    .section1-text-info:nth-of-type(1) {
+        margin-top: 62px;
+        margin-bottom: 28px;
+    }
+
+    .section1-title {
+        font-size: 34px;
+        line-height: 54px;
+        gap: 0;
+        margin-bottom: 20px;
+    }
+
+    .section1-show {
+        font-size: 20px;
+        line-height: 27px;
+        margin-bottom: 61px;
+        max-width: 90%;
+    }
+
+    .section-btn {
+        transition: 0.3s;
+        width: 100%;
+        max-width: 300px;
+        padding: 16px 18px;
+        font-size: 20px;
+    }
+
+    .section-2 {
+        padding: 60px 20px;
+    }
+
+    .sec2-title {
+        font-size: 34px;
+        line-height: 44px;
+        margin-bottom: 50px;
+    }
+
+    .sec2-contents {
+        flex-direction: column;
+        gap: 56px;
+    }
+
+    .sec2-part-texts {
+        gap: 30px;
+    }
+
+    .sec2-text h4 {
+        font-size: 22px;
+        margin-bottom: 12px;
+    }
+
+    .sec2-text p {
+        font-size: 20px;
+    }
+
+    .sec2-img {
+        max-width: 500px;
+        max-height: 550px;
+        transform: rotate(0deg);
+    }
+
+    .section-3 {
+        padding: 60px 20px;
+    }
+
+    .sec3-title {
+        font-size: 34px;
+        line-height: 44px;
+        margin-bottom: 50px;
+    }
+
+    .sec4-btn {
+        transition: 0.3s;
+        width: 100%;
+        max-width: 300px;
+        padding: 16px 18px;
+        font-size: 20px;
+        margin-top: 48px;
+    }
+
+    .section-5 {
+        padding: 60px 20px;
+    }
+
+    .sec5-title {
+        font-size: 34px;
+        line-height: 44px;
+    }
+
+    .sec5-contents-block {
+        gap: 38px;
+        margin-top: 44px;
+    }
+
+    .sec5-content img {
+        margin-bottom: 22px;
+    }
+
+    .sec5-content h6 {
+        font-size: 22px;
+        margin-bottom: 18px;
+    }
+
+    .section5-btn {
+        transition: 0.3s;
+        width: 100%;
+        max-width: 300px;
+        padding: 16px 18px;
+        font-size: 20px;
+        margin-top: 48px;
+    }
+
+    .section-7 {
+        padding: 60px 20px;
+    }
+
+
+    .section-7-text-top {
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+
+    .section-7-name {
+        font-size: 34px;
+        line-height: 44px;
+    }
+
+    .section-7-text-untertitle {
+        font-size: 22px;
+    }
+
+    .section-7-text-bottom {
+        font-size: 20px;
+    }
+
+    .section-7-contents {
+        gap: 46px;
+    }
+
+    .google-map {
+        max-height: 400px;
+    }
+}
+
+@media (max-width: 768px) {
+    .sec-3-settings-items {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
     }
 }
 
@@ -396,5 +753,137 @@ body {
     .sec3-title {
         font-size: 32px;
         line-height: 1.2;
+    }
+
+    .sec5-contents-block {
+        grid-template-columns: 1fr;
+    }
+
+    .sec5-title {
+        font-size: 32px;
+        line-height: 38px;
+    }
+}
+
+@media (max-width: 576px) {
+    .section1-title {
+        font-size: 26px;
+        line-height: 42px;
+        margin-bottom: 20px;
+    }
+
+    .section1-show {
+        font-size: 18px;
+        line-height: 24px;
+        margin-bottom: 40px;
+    }
+
+    .section-btn {
+        max-width: 300px;
+        padding: 16px 18px;
+        font-size: 18px;
+    }
+
+    .sec2-title {
+        font-size: 26px;
+        line-height: 34px;
+        margin-bottom: 38px;
+    }
+
+    .sec2-text h4 {
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .sec2-text p {
+        font-size: 18px;
+    }
+
+    .sec2-part-texts {
+        gap: 22px;
+    }
+
+    .sec2-contents {
+        gap: 40px;
+    }
+
+    .sec3-title {
+        font-size: 26px;
+        line-height: 1.2;
+    }
+
+    .sec3-item-descrip p:nth-of-type(2) {
+        font-size: 20px;
+        line-height: 1.3;
+    }
+
+    .sec3-item-descrip p:nth-of-type(1) {
+        width: 34px;
+        height: 34px;
+        font-size: 19px;
+    }
+
+    .sec3-item-descrip {
+        gap: 14px;
+        margin-bottom: 8px;
+    }
+
+    .sec3-item>p {
+        font-size: 18px;
+        line-height: 1.4;
+    }
+
+    .sec4-btn {
+        font-size: 18px;
+        margin-top: 48px;
+    }
+
+    .sec5-title {
+        font-size: 26px;
+        line-height: 36px;
+    }
+
+    .sec5-content h6 {
+        font-size: 20px;
+        margin-bottom: 16px;
+    }
+
+    .section5-btn {
+        padding: 16px 18px;
+        font-size: 18px;
+    }
+
+    .section-7-text-top {
+        font-size: 20px;
+        margin-bottom: 18px;
+    }
+
+    .section-7-name {
+        font-size: 26px;
+        margin-bottom: 10px;
+    }
+
+    .section-7-text-untertitle {
+        font-size: 20px;
+        margin-bottom: 30px;
+    }
+
+    .section-7-text-bottom {
+        font-size: 18px;
+    }
+
+    .section-7-contents {
+        gap: 14px;
+    }
+
+    .legal-privacy {
+        flex-wrap: wrap;
+        margin-top: 4rem !important;
+    }
+}
+
+@media (max-width:528px) {
+    .legal-privacy a:not(:last-child)::after {
+        display: none;
     }
 }
